# ratatui-templates

./: .gitignore  CONTRIBUTING.md  README.md  cargo-generate.toml
.github/workflows/: build.yml
sample-output/: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
sample-output/src/: main.rs
simple/: README.md
simple-app/: CONTRIBUTING.md  Cargo.toml.liquid  LICENSE-APACHE  LICENSE-MIT  README.md  cargo-generate.toml  pre-script.rhai
simple-app-generated/: CONTRIBUTING.md  Cargo.toml  README.md
simple-app/src/: terminal.rs
simple/src/: app.rs
