[package]
name = "sample-output"
description = "A sample application built using https://github.com/joshka/ratatui-template"
authors = ["Josh McKinney <joshka@users.noreply.github.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.27.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
