[package]
name = "sample-output"
description = "Sample application using <https://github.com/joshka/ratatui-templates>"
authors = ["Josh McKinney <joshka@users.noreply.github.com>"]
repository = "https://github.com/joshka/sample-output"
License = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
ratatui = "0.27.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
